testing for change in document

--- a/document.tex
+++ b/document.tex
@@ -22,7 +22,7 @@
 
 % set the title and author information
 \title{Exploring-Solar-Powered-Vehicle-Energy-Modeling-A-Report-Following-WEKA-Tutorial-Guidance}
-\author{Julia Chun}
+\author{Julia Chun Testing for test in Github}
 \affiliation{Occidental College}
 \email{jchun2@oxy.edu}
 
