--- a/document.tex
+++ b/document.tex
@@ -11,8 +11,7 @@
 % overwrite it again so related text shows as footnotes
 %\renewcommand{\fixme}[2][]{\textcolor{red}{#2\footnote{#1}}}
 
-% read references.bib for the bibtex data
-\bibliography{references}
+
 
 
 % include metadata in the generated pdf file
@@ -76,6 +75,27 @@ Although this tutorial could help with some aspects of my project, I plan to fol
     \caption{ Random Forest Results.}
     \label{Figure 2}
 \end{figure}
+
+\newpage
+\begin{thebibliography}{100}
+\addtolength{\leftmargin}{0.2in} % sets up alignment with the following line.
+\setlength{\itemindent}{-0.2in}
+\bibitem{video}
+“How to Build Regression Models (Weka Tutorial #1).” YouTube, YouTube, 1 Nov. 2020, www.youtube.com/watch?v=t5mylGHE2Fg.  
+\bibitem{website}
+Iborozan. “Iborozan/Solar: Insight Data Science Project: Predicting Photovoltaic Solar Panel Generation Using Machine Learning.” GitHub, github.com/iborozan/solar. Accessed 11 Mar. 2024. 
+\bibitem{website}
+Shahane, Saurabh. “Horizontal Photovoltaic Power Output Data.” Kaggle, 28 Mar. 2021, www.kaggle.com/datasets/saurabhshahane/northern-hemisphere-horizontal-photovoltaic.  
+\bibitem{website}
+“Rise of Solar Energy, Electric Vehicle Sales Gives Hope for Climate Goals, Report Says | CBC News.” CBCnews, CBC/Radio Canada, 26 Sept. 2023, www.cbc.ca/news/climate/iea-report-climate-emissions-1.6978343. 
+\bibitem{website}
+“T-Test, Chi-Square, ANOVA, Regression, Correlation...” Datatab, datatab.net/tutorial/regression. Accessed 11 Mar. 2024.  
+
+\end{thebibliography}
+
+
+\printbibliography
+\printbibliography
  
 
 
